# Cloudy-Intell

./: .gitignore  README.md  langgraph.json  langgraph_app.py  main.py  pyproject.toml
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_ops.pckl
Development/: CloudyIntel.py
UI/: README.md  metadata.json  package-lock.json  package.json
UI/app/: error.tsx  layout.tsx  loading.tsx  page.tsx
UI/app/api/runs/stream/: route.ts
UI/app/api/threads/: route.ts
UI/app/api/threads/[threadId]/state/: route.ts
UI/components/: CompareView.tsx  CopilotSidebar.tsx  SidebarNavigator.tsx  WorkflowGraph.tsx
UI/components/edges/: FarRightEdge.tsx
UI/components/nodes/: AgentNode.tsx  DecisionNode.tsx  StartEndNode.tsx  ToolNode.tsx
UI/hooks/: use-mobile.ts  useRunOrchestration.ts
docs/: migration-notes.md
src/cloudy_intell/: __init__.py  cli.py  langgraph_app.py
src/cloudy_intell/agents/: __init__.py  context.py  domain_nodes.py  supervisors.py  synthesizers.py  tool_execution.py
src/cloudy_intell/config/: __init__.py  provider_meta.py  settings.py
src/cloudy_intell/graph/: __init__.py  builder.py  routing.py  state_init.py  state_reducers.py  subgraphs.py
src/cloudy_intell/infrastructure/: __init__.py  checkpointer.py  llm_factory.py  logging_utils.py  tools.py  vector_store.py
src/cloudy_intell/schemas/: __init__.py  models.py
src/cloudy_intell/services/: __init__.py  architecture_service.py
tests/: conftest.py  test_langsmith_integration.py  test_routing.py  test_state_reducers.py
